syntax = "proto3";

package grpc;

option go_package = "github.com/Angcelo/SIOP1_gRPC/proto";

message Item {
  enum Itempriority {
    LOW = 0;
    MEDIUM = 50;  
    HIGH = 100;
  }

  enum Itemstatus {
    Inactive = 0;
    Active = 1;
  }
  
  string id = 1;
  string wishlist = 2;
  string name = 3;
  string link = 4;
  double price = 5;
  Itempriority priority = 6;
  Itemstatus status = 7;
}

message Wishlist {
  enum Wishliststatus {
    Inactive = 0;
    Active = 1;
  }

  string id = 1;
  string name = 2;
  Wishliststatus status = 3;
}

message CreateWishlistReq {
  Wishlist Wishlist = 1;
}

message CreateWishListRes {
  string WishlistId = 1;
}

message AddItemReq {
  Item Item = 2;
}

message AddItemRes {
  string ItemId = 1;
}

message ListWishListReq {
  string WishlistId = 1;
}

message ListWishListRes {
  repeated Item Items = 1;
}

service WishListService {
  rpc Create(CreateWishlistReq) returns (CreateWishListRes);
  rpc Add(AddItemReq) returns (AddItemRes);
  rpc List(ListWishListReq) returns (ListWishListRes);
}   